<resources>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="map">Map</string>
    <string name="home">Home</string>
    <string name="username">User Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="facebook_login">Login with Facebook</string>
    <string name="app_name">Food Truckers</string>
    <string name="action_call">Llamar</string>
    <string name="action_search">Buscar</string>
    <string name="action_settings">Configuración</string>
    <string name="Senseiz1">sensei1</string>
    <string name="Senseiz2">sensei2</string>
    <string name="Senseiz3">sensei3</string>
    <string name="Click_Here">Click Here</string>
    <string name="Image_frag_Descrip">my Image</string>
    <string name="Dynamic_Frag">DYNAMIC FRAGMENT</string>
    <string name="title_activity_main__nexting">Main_Nexting</string>
    <string name="ImageOfDynamic">Image of Dynamic</string>
    <string name="title_activity_maps2">Map</string>
    <string name="draw_open">Open</string>
    <string name="draw_close">Close</string>
    <string name="configuration">Configurationz</string>
    <string name="Favoritos">Favoritos</string>
    <string name="configuracion">Configuracion</string>
    <string name="fuck_it">fuckin it</string>
    <string name="fuck_it2">Showing_home</string>
    <string name="title_activity_favorites">favorites</string>
    <string name="title_activity_favorite3">favorite3</string>
    <string name="maps">Map</string>
    <string name="Text_Truck_Name">Truck Name</string>
    <string name="Text_Truck_TypeFood">Truck Type of Food</string>
    <string name="title_activity_spec_food_truck">SpecFoodTruck</string>
    <string name="title_activity_fucking_shit2">FuckingShit2</string>
    <string name="title_activity_login__screen">login_Screen</string>
    <string name="Busqueda">Busqueda</string>
    <string name="logo">Toolbar Logo</string>
</resources>
