<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_light"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">


    <EditText
        android:id="@+id/login_username_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/username"
        android:inputType="textEmailAddress" />


    <EditText
        android:id="@+id/login_password_tv"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login_submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_dark"
        android:text="@string/login"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/login_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/primary_dark"
        android:text="@string/register"
        android:textColor="@android:color/white" />


</LinearLayout>

